@@ -2294,3 +2294,10 @@ Added E-Wireless, requested by Matt Hyclak.
 
 -------------------------------------------------------------------------------
 
+Tue Jul  6 12:52:08 EDT 2004
+(KainX)
+
+Removed E-Gtkrc as requested by its author.
+
+-------------------------------------------------------------------------------
+
